--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.2"
 services:
   whiteboard:
     build: .
-    command: pm2 start ecosystem.config.js
+    command: pm2-runtime start ecosystem.config.js
     container_name: 'whiteboard'
     volumes:
       - .:/code
